jenkins-as-code/k8s-deployment/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---

  kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: jenkins-home
    namespace: jenkins
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi
