jenkins-as-code/k8s-deployment/01-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-ui
  namespace: jenkins
spec:
  selector:
    app: master
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: ui
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins-discovery
  namespace: jenkins
spec:
  selector:
    app: master
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
        - name: master
          image: k8sguide/jenkins-as-code:2.235.1
          ports:
            - containerPort: 8080
            - containerPort: 50000
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 5
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
          resources:
            limits:
              cpu: 500m
              memory: 1500Mi
            requests:
              cpu: 500m
              memory: 1500Mi
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
---
