jenkins-as-code/k8s-deployment/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ui-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: jenkins.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-ui
              servicePort: 8080
---
